mobile nav overflow fix

--- a/assets/scss/_twintailsstyles.scss
+++ b/assets/scss/_twintailsstyles.scss
@@ -410,6 +410,7 @@ img {
 			-webkit-clip-path: circle(25px at calc(100% - 45px) 45px);
 			        clip-path: circle(25px at calc(100% - 45px) 45px);
 			transition: all 0.3s ease-in-out;
+			overflow: auto;
 
 			.navigation-ul-mobile{
 				position: absolute;
